# ddub

./: .gitignore  LICENSE  README.md  generate.py  pyproject.toml
src/ddub/restrictions/: restrictions.py  restrictions.yaml
src/ddub/restrictions/tests/: test_restrictions.py
src/ddub/skills/: skills.py
src/ddub/skills/tests/: test_skills.py
src/ddub/spells/: spells.py
src/ddub/spells/tests/: test_spells.py
src/ddub/splits/: split.py
src/ddub/weapons/: weapons.py
